@@ -28,7 +28,6 @@ public class CommonService {
     private static final List<User> users = new ArrayList<>();
     private static final List<Announcement> announcementList = new ArrayList<>();
 
-
     public UserCreateResponse registerUser(UserCreateRequest createRequest) {
         User user = UserMapperUtil.userCreateRequestToEntity(createRequest);
 
@@ -54,14 +53,11 @@ public class CommonService {
         if (users.isEmpty()) {
             throw new UserNotFoundException(AnnouncementConstraint.user_not_found);
         } else {
+
             return users.stream()
-                    .map(user -> new UserReadResponse.Builder()
-                            .setId(user.getId())
-                            .setAge(user.getAge())
-                            .setUsername(user.getUsername())
-                            .setEmail(user.getEmail())
-                            .build())
-                    .collect(Collectors.toList());
+                    .map(UserMapperUtil::entityToReadResponse)
+                    .toList();
+
 
         }
     }
@@ -114,7 +110,7 @@ public class CommonService {
                 throw new AnnouncementNotFoundException(AnnouncementConstraint.announcement_not_found);
             }
 
-        return AnnouncementMapperUtil.entityToAnnouncementReadResponse(announcement);
+            return AnnouncementMapperUtil.entityToAnnouncementReadResponse(announcement);
 
         }
         return null;
@@ -122,19 +118,13 @@ public class CommonService {
 
     public AnnouncementUpdateResponse updateAnnouncement(AnnouncementUpdateRequest request, Long id) {
         AnnouncementReadResponse readResponse = readAnnouncement(id);
-        AnnouncementReadResponse updateAnnouncement = new AnnouncementReadResponse();
-        updateAnnouncement.setId(readResponse.getId());
-        updateAnnouncement.setType(request.getType());
-        updateAnnouncement.setTitle(request.getTitle());
-        updateAnnouncement.setDescription(request.getDescription());
+        Announcement announcement = AnnouncementMapperUtil.updateRequestToEntity(request);
+        announcement.setId(readResponse.getId());
 
-        AnnouncementUpdateResponse response = new AnnouncementUpdateResponse();
-        response.setId(updateAnnouncement.getId());
-        response.setDescription(updateAnnouncement.getDescription());
-        response.setTitle(updateAnnouncement.getTitle());
-        response.setType(updateAnnouncement.getType());
+        AnnouncementUpdateResponse updateResponse =
+                AnnouncementMapperUtil.entityToUpdateResponse(announcement);
 
-        return response;
+        return updateResponse;
     }
 
     public void deleteAnnouncement(Long id) {
@@ -154,15 +144,11 @@ public class CommonService {
         if (announcementList.isEmpty()) {
             throw new AnnouncementNotFoundException(AnnouncementConstraint.announcement_not_found);
         } else {
-            AnnouncementReadResponse readResponse = new AnnouncementReadResponse();
-            readResponse.setId(announcement.getId());
-            readResponse.setDescription(announcement.getDescription());
-            readResponse.setTitle(announcement.getTitle());
-            readResponse.setTitle(announcement.getTitle());
 
-            responseList.add(readResponse);
+            return announcementList.stream()
+                    .map(AnnouncementMapperUtil::entityToAnnouncementReadResponse)
+                    .toList();
 
-            return responseList;
         }
     }
 
@@ -173,17 +159,12 @@ public class CommonService {
         for (AnnouncementReadResponse announcementReadResponse : announcementReadResponses) {
             if (announcementReadResponse.getId().equals(announcementId)) {
 
-                Announcement announcement = new Announcement.Builder()
-                        .setId(announcementReadResponse.getId())
-                        .setType(announcementReadResponse.getType())
-                        .setTitle(announcementReadResponse.getTitle())
-                        .setDescription(announcementReadResponse.getDescription())
-                        .build();
+                Announcement announcement =
+                        AnnouncementMapperUtil.readResponseToEntity(announcementReadResponse);
+
                 announcementList.remove(announcement);
             }
         }
-
-
     }
 
     public List<AnnouncementReadResponse> readAnnouncementByUserId(Long userId) {
@@ -195,32 +176,28 @@ public class CommonService {
             List<AnnouncementReadResponse> userAnnouncement = new ArrayList<>();
             for (Announcement announcement : announcementList) {
                 if (announcement.getUserId().equals(userId)) {
-                    AnnouncementReadResponse announcementReadResponse = new AnnouncementReadResponse();
-                    announcementReadResponse.setId(announcement.getId());
-                    announcementReadResponse.setType(announcement.getType());
-                    announcementReadResponse.setTitle(announcement.getTitle());
-                    announcementReadResponse.setDescription(announcement.getDescription());
+                    AnnouncementReadResponse announcementReadResponse =
+                            AnnouncementMapperUtil.entityToAnnouncementReadResponse(announcement);
+
                     userAnnouncement.add(announcementReadResponse);
                 }
             }
             return userAnnouncement;
         }
-        return null;
+        throw new AnnouncementNotFoundException(AnnouncementConstraint.announcement_not_found);
     }
 
     public List<AnnouncementReadResponse> readAnnouncementByType(String type) {
         List<AnnouncementReadResponse> filterAnnouncement = new ArrayList<>();
 
-        AnnouncementReadResponse readResponse = new AnnouncementReadResponse();
-        if (readResponse.getType().name().equals(type)) {
-            for (Announcement announcement : announcementList) {
-                readResponse.setId(announcement.getId());
-                readResponse.setType(announcement.getType());
-                readResponse.setTitle(announcement.getTitle());
-                readResponse.setDescription(announcement.getDescription());
-                filterAnnouncement.add(readResponse);
+        for (Announcement announcement : announcementList) {
+            if (announcement.getType().name().equals(type)) {
+                AnnouncementReadResponse announcementReadResponse =
+                        AnnouncementMapperUtil.entityToAnnouncementReadResponse(announcement);
+                filterAnnouncement.add(announcementReadResponse);
             }
         }
+
         return filterAnnouncement;
     }
 
